[package]
name = "treelog"
version = "0.1.0"
authors = ["konrad <szymoniak.konrad@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
grep = "0.2.7"
tokio = { version = "1", features = ["full"] }
inotify = "0.9.2"
futures-util = "0.3.13"
slab = "0.4.2"
async-channel = "1.6.1"
tokio-util = "0.6.5"
